--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@ implemented using native GNU Make functionality that provide list and
 string manipulation, integer arithmetic, associative arrays, stacks,
 and debugging facilities.&nbsp; The GMSL is released under the BSD License.<br>
 <br>
-<a href="http://sourceforge.net/projects/gmsl/">[Project Page]</a> <a href="http://sourceforge.net/project/showfiles.php?group_id=129887">[Download]</a>
-<a href="http://sourceforge.net/forum/forum.php?forum_id=443916">[Discussion
-Forum]</a><br>
+<a href="https://github.com/jgrahamc/gmsl/">[Project Page]</a>
+<br>
 <h2>Using GMSL</h2>
 The two files needed are <span style="font-family: monospace;">gmsl</span>
 and <span style="font-family: monospace;">__gmsl</span>.&nbsp; To
