Added Releases link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ string manipulation, integer arithmetic, associative arrays, stacks,
 and debugging facilities.&nbsp; The GMSL is released under the BSD License.<br>
 <br>
 <a href="https://github.com/jgrahamc/gmsl/">[Project Page]</a>
+<a href="https://github.com/jgrahamc/gmsl/releases/">[Releases]</a>
 <br>
 <h2>Using GMSL</h2>
 The two files needed are <span style="font-family: monospace;">gmsl</span>
