--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ include the GMSL in your Makefile do<br>
 you have the right version of <span style="font-family: monospace;">gmsl</span>
 use the <span style="font-family: monospace;">gmsl_compatible</span>
 function (see
-below). The current version is <span style="font-family: monospace;">1 1 9</span>.<br>
+below). The current version is <span style="font-family: monospace;">1 2 0</span>.<br>
 <br>
 The GMSL package also includes a test suite for GMSL.&nbsp; Just run <span style="font-family: monospace;">make -f gmsl-tests</span>.<br>
 <h2>Logical Operators</h2>GMSL has boolean $(true) (a non-empty string)
@@ -728,6 +728,6 @@ result in name and arguments being traced.<br>
 </table>
 <span style="font-family: monospace;"></span><br>
 <hr>
-Copyright (c) 2005-2020 <a href="http://www.jgc.org/">John Graham-Cumming</a>.<br>
+Copyright (c) 2005-2022 <a href="https://www.jgc.org/">John Graham-Cumming</a>.<br>
 <hr style="width: 100%; height: 2px;">
 </body></html>
